# nhse-rap-cookiecutter

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_CHECKLIST.md  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: checks.yml  deploy-docs.yml  pr-checks.yml
contributing/: index.html
docs/content/: contributing.md  getting_started.md  index.md  usage.md
docs/content/stylesheets/: nhs_style.css
docs/overrides/: main.html
docs/overrides/partials/: footer.html
getting_started/: index.html
hooks/: post_gen_project.py
nhse_rap_cookiecutter/: __init__.py  cli.py
scripts/: configs.yaml  generate_projects.py  generate_test_projects.py  test_configs.yaml
scripts/tests/: __init__.py  conftest.py  test_generate_projects.py  test_generate_test_projects.py
search/: search_index.json
tests/: test_cli.py  test_comparison.py  test_cookiecutter.py  test_dependency_files.py  test_template.py
tests/unittests/: test_comparison.py  test_cookiecutter.py  test_template.py
tmp/: .gitkeep
usage/: index.html
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  LICENSE-OGL  Makefile  README.md  _environment.yml  _pyproject.toml  badges.toml  mkdocs.yml
{{ cookiecutter.repo_name }}/docs/: README.md
{{ cookiecutter.repo_name }}/docs/content/: contributing.md  getting_started.md  index.md  project_summary.md  testing.md  usage.md
{{ cookiecutter.repo_name }}/docs/content/api_reference/: index.md
{{ cookiecutter.repo_name }}/docs/content/overrides/partials/: footer.html
{{ cookiecutter.repo_name }}/docs/mkdocs/: mkdocs.yml
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: index.md  usage.md
{{ cookiecutter.repo_name }}/models/: model_card_template.md
{{ cookiecutter.repo_name }}/tests/: README.md
{{ cookiecutter.repo_name }}/tests/e2e/: .gitkeep
{{ cookiecutter.repo_name }}/tests/unittests/: test_data.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: config.py  dataset.py  features.py  plots.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/modeling/: predict.py  train.py
