[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nhse-rap-cookiecutter"
version = "1.0.1"
description = "A cookiecutter template for NHS England Reproducible Analytical Pipelines (RAP) projects."
authors = [
  { name = "Joe Wilson", email = "joseph.wilson8@nhs.net" },
  { name = "NHS England Data Science and Applied AI", email = "data.science@nhs.net" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = ["click", "cookiecutter", "tomlkit"]

[project.scripts]
nhs-rap-template = "nhse_rap_cookiecutter.cli:main"

[project.optional-dependencies]
dev = ["build", "pre-commit", "pytest", "pytest-cookies", "ruff"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-include-markdown-plugin"]

[project.urls]
"Homepage" = "https://github.com/nhsengland/nhse-rap-cookiecutter"
"Source Code" = "https://github.com/nhsengland/nhse-rap-cookiecutter"
"Bug Tracker" = "https://github.com/nhsengland/nhse-rap-cookiecutter/issues"

[tool.ruff]
line-length = 99
target-version = "py310"
extend-exclude = [
  "[{][{] cookiecutter.repo_name [}][}]",
  ".venv",
  "venv",
  "dist",
  "build",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E203", # whitespace before ':'
  "E402", # module level import not at top of file
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
